--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -140,6 +140,21 @@ body {
   }
 }
 
+@keyframes gradient {
+  0%, 100% {
+    background-position: 0% 50%;
+  }
+  25% {
+    background-position: 50% 100%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  75% {
+    background-position: 50% 0%;
+  }
+}
+
 body > * {
   position: relative;
   z-index: 1;
